# blankforge

./: .gitignore  README.md  main.py  pyproject.toml
blankforge/data/: fin_model.py  model.py  serializer.py
blankforge/geometry/: board.py  curves.py  fin.py  tail.py
blankforge/renderer/: _blender_script.py  base.py  blender.py  opengl.py
blankforge/ui/: main_window.py
blankforge/ui/tabs/: tab_export.py  tab_fins.py  tab_parameters.py  tab_profile_view.py  tab_quad_view.py  tab_rendered_view.py  tab_side_view.py  tab_statistics.py  tab_template.py  tab_top_view.py
blankforge/ui/widgets/: control_point_editor.py  curve_viewport.py  fin_2d_editor.py  gl_viewport.py  value_sliders.py  viewport_controls.py
samples/: default.surfboard  longboard_classic.surfboard  midlength_egg.surfboard  shortboard_thruster.surfboard
tests/: render_all_samples.py  test_geometry.py  test_model.py
