[project]
name = "blankforge"
version = "0.1.0"
description = "Parametric surfboard designer"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2",
    "scipy>=1.14",
    "pyside6>=6.8",
    "PyOpenGL>=3.1",
    "pydantic>=2.10",
]

[project.scripts]
blankforge = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
